test/libsolidity/syntaxTests/freeFunctions/free_payable.sol
function fun() payable {
}
// ----
// TypeError 9559: (0-26): Free functions cannot be payable.
